Prevent long code block from breaking page on mobile

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -107,6 +107,7 @@ h1, h2, h3 {
 
   .contribution-title {
     margin: 0.5em 0;
+    overflow-x: scroll;
   }
 }
 
